cloud/deploy/manifests/interfaces/postgres/pgadmin.yaml
# Copyright © 2022 sealos.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and

apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin-service
  annotations:
  labels:
    name: pgadmin-service

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin-service
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: http
 selector:
   app: pgadmin
 type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          imagePullPolicy: IfNotPresent
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
          volumeMounts:
          - name: pgadmin-config
            mountPath: /pgadmin4/servers.json
            subPath: servers.json
            readOnly: true
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin-config
        configMap:
          name: pgadmin-config
      - name: pgadmin-data
        persistentVolumeClaim:
          claimName: pgadmin-data-pv-claim
